--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,9 @@ __azurite_db*__.json
 .python_packages
 .DS_Store
 blog.md
+
+# terraform
+.terraform
+.terraform.lock.hcl
+terraform.tfstate
+terraform.tfstate.backup
