--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ azure-eventhub
 openai>=1.0.0
 azure-eventhub
 azurefunctions-extensions-http-fastapi
+azure-identity>=1.12.0
+azure-keyvault-secrets>=4.7.0
+azure-storage-blob>=12.14.1
+litellm>=1.0.0
